--- a/ff_basic_temp.j2
+++ b/ff_basic_temp.j2
@@ -4,13 +4,13 @@
 
 
 set firewall family {{param.ffamily}} filter {{param.filter_name}} interface-specific
-set firewall family {{param.ffamily}} filter {{param.filter_name}} term {{param.range_hex}} from flexible-match-range match-start {{param.match_start}}
-set firewall family {{param.ffamily}} filter {{param.filter_name}} term {{param.range_hex}} from flexible-match-range byte-offset {{param.byte_offset}}
-set firewall family {{param.ffamily}} filter {{param.filter_name}} term {{param.range_hex}} from flexible-match-range bit-length {{param.bit_length}}
-set firewall family {{param.ffamily}} filter {{param.filter_name}} term {{param.range_hex}} from flexible-match-range range {{param.range_hex}}
-set firewall family {{param.ffamily}} filter {{param.filter_name}} term {{param.range_hex}} then count dst-{{param.range_hex}}
-set firewall family {{param.ffamily}} filter {{param.filter_name}} term {{param.range_hex}} then log
-set firewall family {{param.ffamily}} filter {{param.filter_name}} term {{param.range_hex}} then accept
+set firewall family {{param.ffamily}} filter {{param.filter_name}} term {{param.filter_name}} from flexible-match-range match-start {{param.match_start}}
+set firewall family {{param.ffamily}} filter {{param.filter_name}} term {{param.filter_name}} from flexible-match-range byte-offset {{param.byte_offset}}
+set firewall family {{param.ffamily}} filter {{param.filter_name}} term {{param.filter_name}} from flexible-match-range bit-length {{param.bit_length}}
+set firewall family {{param.ffamily}} filter {{param.filter_name}} term {{param.filter_name}} from flexible-match-range range {{param.range_hex}}
+set firewall family {{param.ffamily}} filter {{param.filter_name}} term {{param.filter_name}} then count dst-{{param.range_hex}}
+set firewall family {{param.ffamily}} filter {{param.filter_name}} term {{param.filter_name}} then log
+set firewall family {{param.ffamily}} filter {{param.filter_name}} term {{param.filter_name}} then accept
 set firewall family {{param.ffamily}} filter {{param.filter_name}} term DEFAULT_ACCEPT then count default
 set firewall family {{param.ffamily}} filter {{param.filter_name}} term DEFAULT_ACCEPT then accept
 
